Добавлена новая зависимость

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
     </dependency>
 
 
-
     <dependency>
       <groupId>javax.websocket</groupId>
       <artifactId>javax.websocket-api</artifactId>
@@ -51,9 +50,11 @@
       <version>2.20.0</version>
     </dependency>
 
-
-
-
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+  </dependency>
   </dependencies>
 
   <build>
@@ -79,7 +80,6 @@
         </plugin>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          
           <configuration>
             <outputDirectory>/home/nicki/dev/Tomcat/apache-tomcat-8.5.91/webapps/</outputDirectory>
             <warName>gyberwebsocket-0.0.2-inside-test</warName>
