--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,15 @@
     <version>6.0.11</version>
   </dependency>
 
+  <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.28</version>
+    <scope>provided</scope>
+  </dependency>
+
+
 
       <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
     <dependency>
