--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
   </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
-  <dependency>
+  <!-- <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-security</artifactId>
     <version>3.1.2</version>
-  </dependency>
+  </dependency> -->
 
 
 
