--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>gyber.org</groupId>
   <artifactId>gyberwebsocket</artifactId>
   <version>0.0.0.2-inside-test</version>
-  <packaging>war</packaging>
+  <!-- <packaging>war</packaging> -->
 
   <name>gyberwebsocket Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
@@ -18,9 +18,16 @@
     
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
+      <java.version>17</java.version>
 
   
   </properties>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.2</version>
+  </parent>
 
   <dependencies>
     <dependency>
@@ -34,22 +41,24 @@
   <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-web</artifactId>
-    <version>3.1.2</version>
   </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
   <dependency>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-data-jpa</artifactId>
-    <version>3.1.2</version>
   </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
-  <!-- <dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-security</artifactId>
-    <version>3.1.2</version>
-  </dependency> -->
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-security</artifactId>
+</dependency>
+
+
+
+
 
 
 
@@ -68,6 +77,12 @@
     <groupId>org.springframework</groupId>
     <artifactId>spring-messaging</artifactId>
     <version>6.0.11</version>
+  </dependency>
+
+  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>5.1.6.RELEASE</version>
   </dependency>
 
   <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -98,39 +113,11 @@
     </dependency>
 
   
+  
+    
   </dependencies>
 
   <build>
-    <finalName>gyberwebsocket</finalName>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    
   </build>
 </project>
