--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.2</version>
+    <version>2.6.15</version>
   </parent>
 
   <dependencies>
@@ -42,6 +42,7 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-web</artifactId>
   </dependency>
+
 
   <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
   <dependency>
@@ -63,21 +64,28 @@
 </dependency>
 
 
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket -->
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-websocket</artifactId>
+  <!-- <version>3.1.2</version> -->
+</dependency>
+
 
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
-  <dependency>
+  <!-- <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-websocket</artifactId>
     <version>6.0.11</version>
   </dependency>
 
-  <!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
+  
   <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-messaging</artifactId>
     <version>6.0.11</version>
-  </dependency>
+  </dependency> -->
 
 
   <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
