--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,14 @@
   <!-- <version>3.1.2</version> -->
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-devtools</artifactId>
+  <!-- <version>2.6.3</version> -->
+</dependency>
+
+
 
 
     <!-- https://mvnrepository.com/artifact/org.springframework/spring-websocket -->
