--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
       <scope>test</scope>
     </dependency> -->
 
+    <!-- Данная зависимость позволяет конвртировать объекты типа LocalDateTime в JSON -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.12.3</version> 
+  </dependency>
+  
+
 
     <dependency>
       <groupId>org.junit.vintage</groupId>
