--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 </dependency>
 
 
+<dependency>
+  <groupId>org.web3j</groupId>
+  <artifactId>core</artifactId>
+  <version>5.0.0</version>
+</dependency>
+
+
 <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket -->
 <dependency>
   <groupId>org.springframework.boot</groupId>
