--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,14 @@
 </dependency>
 
 
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+<dependency>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+
+
+
 <dependency>
   <groupId>org.web3j</groupId>
   <artifactId>core</artifactId>
