--- a/pom.xml
+++ b/pom.xml
@@ -82,17 +82,18 @@
     <artifactId>spring-boot-starter-data-jpa</artifactId>
   </dependency>
 
-  
 <dependency>
-  <groupId>org.springframework.boot</groupId>
-  <artifactId>spring-boot-starter-security</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+    <version>2.3.3.RELEASE</version>
 </dependency>
 
 
+<!-- 
 <dependency>
   <groupId>org.springframework.security</groupId>
   <artifactId>spring-security-config</artifactId>
-</dependency>
+</dependency> -->
 
 
 <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
